Looks like it's a first-chance error for AMD integrated GPU, if I skip camera motion draw intentionally, the sky pass result gets cleared...
Now I simply workaround the issue.

27-10-2023: Started to add BC6H compression. Got a preliminary result, I should be close to the proper implemenation.

28-10-2023: Finished BC6H compression.
29-10-2023: Spotted stupid typos in the texture compressor, fixed it lol. Also used higher thread count for compression.
Still trying the mode 10 of BC6H, have not succeed yet. After a few considerations, I think trying mode 14 might be better.
Finished the experient of mode 14, the delta precision is too low and it's almost like choosing one end point only!
Next is to try: mode 13 or dynamically select mode 11 and 14 or check the max diff in a block search and select mode based on it!

30-10-2023: Contined to refine the BC6H compression. Now it selects the mode11~14 based on the max delta between color reference.
Finished high-quality BC6H compression!
31-10-2023: Started adding cubemap editor. Also started adding cubemap asset management.
Now creation, import, and export cubemap works properly. Integrated sky cubemap to skylight component, and removed redundant skybox renderer.

01-11-2023: Refactored shared resources in renderer. Fixed related error after validation layer is back.
Still working on the panorama map to cube map.
02-11-2023: Got some progress on the map conversion. Next is to deal with the seam artifact.
The Y faces still need a better formula... 
Finally correct the formula! Next is to deal with mipmap and compression.

03-11-2023: Mipmap generation and data transfer is done for panorama-to-cubemap creation. Deal with compression next.
Finished texture cube creation from panorama.
04-11-2023: Minor bugfixes for low-end GPU and blog post.

05-11-2023: Added mipmap support for render texture. Fixed all kinds of minor issues when I was playing around texture/cubemap editor.