@@ -1,0 +1,31 @@
+#include "SmoothCubemapShader.h"
+
+#if WITH_EDITOR
+
+UHSmoothCubemapShader::UHSmoothCubemapShader(UHGraphic* InGfx, std::string Name)
+	: UHShaderClass(InGfx, Name, typeid(UHSmoothCubemapShader))
+{
+	AddLayoutBinding(1, VK_SHADER_STAGE_COMPUTE_BIT, VK_DESCRIPTOR_TYPE_STORAGE_IMAGE);
+	AddLayoutBinding(1, VK_SHADER_STAGE_COMPUTE_BIT, VK_DESCRIPTOR_TYPE_STORAGE_IMAGE);
+	AddLayoutBinding(1, VK_SHADER_STAGE_COMPUTE_BIT, VK_DESCRIPTOR_TYPE_STORAGE_IMAGE);
+	AddLayoutBinding(1, VK_SHADER_STAGE_COMPUTE_BIT, VK_DESCRIPTOR_TYPE_STORAGE_IMAGE);
+	AddLayoutBinding(1, VK_SHADER_STAGE_COMPUTE_BIT, VK_DESCRIPTOR_TYPE_STORAGE_IMAGE);
+	AddLayoutBinding(1, VK_SHADER_STAGE_COMPUTE_BIT, VK_DESCRIPTOR_TYPE_STORAGE_IMAGE);
+	AddLayoutBinding(1, VK_SHADER_STAGE_COMPUTE_BIT, VK_DESCRIPTOR_TYPE_UNIFORM_BUFFER);
+
+	CreateDescriptor();
+	OnCompile();
+}
+
+void UHSmoothCubemapShader::OnCompile()
+{
+	ShaderCS = Gfx->RequestShader("SmoothCubemapShader", "Shaders/SmoothCubemapComputeShader.hlsl", "SmoothCubemapCS", "cs_6_0");
+
+	// state
+	UHComputePassInfo Info(PipelineLayout);
+	Info.CS = ShaderCS;
+
+	CreateComputeState(Info);
+}
+
+#endif
