@@ -36,7 +36,7 @@ Size=294,475
 Collapsed=0
 
 [Window][Texture Editor]
-ViewportPos=121,48
+ViewportPos=92,76
 ViewportId=0x7361E594
 Size=1502,938
 Collapsed=0
@@ -48,9 +48,9 @@ Size=734,189
 Collapsed=0
 
 [Window][Cubemap Editor]
-ViewportPos=222,45
+ViewportPos=119,59
 ViewportId=0xD8214B93
-Size=1311,1034
+Size=1320,1034
 Collapsed=0
 
 [Table][0xF5C0C183,2]
